Upgrade H2 up to 1.4.199 version.