@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2019 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (http://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
@@ -8,9 +8,13 @@ package org.h2.engine;
 import java.io.IOException;
 import java.sql.SQLException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.BitSet;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Objects;
 import java.util.Properties;
 import java.util.Set;
@@ -19,6 +23,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.concurrent.atomic.AtomicReference;
+
 import org.h2.api.DatabaseEventListener;
 import org.h2.api.ErrorCode;
 import org.h2.api.JavaObjectSerializer;
@@ -34,7 +39,9 @@ import org.h2.jdbc.JdbcConnection;
 import org.h2.message.DbException;
 import org.h2.message.Trace;
 import org.h2.message.TraceSystem;
+import org.h2.mvstore.MVStore;
 import org.h2.mvstore.db.MVTableEngine;
+import org.h2.result.LocalResultFactory;
 import org.h2.result.Row;
 import org.h2.result.RowFactory;
 import org.h2.result.SearchRow;
@@ -42,6 +49,7 @@ import org.h2.schema.Schema;
 import org.h2.schema.SchemaObject;
 import org.h2.schema.Sequence;
 import org.h2.schema.TriggerObject;
+import org.h2.security.auth.Authenticator;
 import org.h2.store.DataHandler;
 import org.h2.store.FileLock;
 import org.h2.store.FileLockMethod;
@@ -64,20 +72,17 @@ import org.h2.table.TableType;
 import org.h2.table.TableView;
 import org.h2.tools.DeleteDbFiles;
 import org.h2.tools.Server;
-import org.h2.util.BitField;
 import org.h2.util.JdbcUtils;
 import org.h2.util.MathUtils;
 import org.h2.util.NetUtils;
-import org.h2.util.New;
 import org.h2.util.SmallLRUCache;
 import org.h2.util.SourceCompiler;
 import org.h2.util.StringUtils;
 import org.h2.util.TempFileDeleter;
 import org.h2.util.Utils;
-import org.h2.value.CaseInsensitiveConcurrentMap;
 import org.h2.value.CaseInsensitiveMap;
 import org.h2.value.CompareMode;
-import org.h2.value.NullableKeyConcurrentMap;
+import org.h2.value.CaseInsensitiveConcurrentMap;
 import org.h2.value.Value;
 import org.h2.value.ValueInt;
 
@@ -93,8 +98,28 @@ public class Database implements DataHandler {
 
     private static int initialPowerOffCount;
 
-    private static final ThreadLocal<Session> META_LOCK_DEBUGGING = new ThreadLocal<>();
-    private static final ThreadLocal<Throwable> META_LOCK_DEBUGGING_STACK = new ThreadLocal<>();
+    private static final boolean ASSERT;
+
+    private static final ThreadLocal<Session> META_LOCK_DEBUGGING;
+    private static final ThreadLocal<Database> META_LOCK_DEBUGGING_DB;
+    private static final ThreadLocal<Throwable> META_LOCK_DEBUGGING_STACK;
+    private static final Session[] EMPTY_SESSION_ARRAY = new Session[0];
+
+    static {
+        boolean a = false;
+        // Intentional side-effect
+        assert a = true;
+        ASSERT = a;
+        if (a) {
+            META_LOCK_DEBUGGING = new ThreadLocal<>();
+            META_LOCK_DEBUGGING_DB = new ThreadLocal<>();
+            META_LOCK_DEBUGGING_STACK = new ThreadLocal<>();
+        } else {
+            META_LOCK_DEBUGGING = null;
+            META_LOCK_DEBUGGING_DB = null;
+            META_LOCK_DEBUGGING_STACK = null;
+        }
+    }
 
     /**
      * The default name of the system user. This name is only used as long as
@@ -115,7 +140,7 @@ public class Database implements DataHandler {
     private final HashMap<String, Setting> settings = new HashMap<>();
     private final HashMap<String, Schema> schemas = new HashMap<>();
     private final HashMap<String, Right> rights = new HashMap<>();
-    private final HashMap<String, UserDataType> userDataTypes = new HashMap<>();
+    private final HashMap<String, Domain> domains = new HashMap<>();
     private final HashMap<String, UserAggregate> aggregates = new HashMap<>();
     private final HashMap<String, Comment> comments = new HashMap<>();
     private final HashMap<String, TableEngine> tableEngines = new HashMap<>();
@@ -123,7 +148,7 @@ public class Database implements DataHandler {
     private final Set<Session> userSessions =
             Collections.synchronizedSet(new HashSet<Session>());
     private final AtomicReference<Session> exclusiveSession = new AtomicReference<>();
-    private final BitField objectIds = new BitField();
+    private final BitSet objectIds = new BitSet();
     private final Object lobSyncObject = new Object();
 
     private Schema mainSchema;
@@ -137,7 +162,7 @@ public class Database implements DataHandler {
     private Index metaIdIndex;
     private FileLock lock;
     private WriterThread writer;
-    private boolean starting;
+    private volatile boolean starting;
     private TraceSystem traceSystem;
     private Trace trace;
     private final FileLockMethod fileLockMethod;
@@ -156,8 +181,8 @@ public class Database implements DataHandler {
     private int allowLiterals = Constants.ALLOW_LITERALS_ALL;
 
     private int powerOffCount = initialPowerOffCount;
-    private int closeDelay;
-    private DatabaseCloser delayedCloser;
+    private volatile int closeDelay;
+    private DelayedDatabaseCloser delayedCloser;
     private volatile boolean closing;
     private boolean ignoreCase;
     private boolean deleteFilesOnDisconnect;
@@ -166,9 +191,8 @@ public class Database implements DataHandler {
     private final String cacheType;
     private final String accessModeData;
     private boolean referentialIntegrity = true;
-    private boolean multiVersion;
-    private DatabaseCloser closeOnExit;
     private Mode mode = Mode.getRegular();
+    /** ie. the MULTI_THREADED setting */
     private boolean multiThreaded;
     private int maxOperationMemory =
             Constants.DEFAULT_MAX_OPERATION_MEMORY;
@@ -196,10 +220,10 @@ public class Database implements DataHandler {
     private final DbSettings dbSettings;
     private final long reconnectCheckDelayNs;
     private int logMode;
-    private MVTableEngine.Store mvStore;
+    private MVTableEngine.Store store;
     private int retentionTime;
     private boolean allowBuiltinAliasOverride;
-    private DbException backgroundException;
+    private final AtomicReference<DbException> backgroundException = new AtomicReference<>();
     private JavaObjectSerializer javaObjectSerializer;
     private String javaObjectSerializerName;
     private volatile boolean javaObjectSerializerInitialized;
@@ -207,10 +231,16 @@ public class Database implements DataHandler {
     private int queryStatisticsMaxEntries = Constants.QUERY_STATISTICS_MAX_ENTRIES;
     private QueryStatisticsData queryStatisticsData;
     private RowFactory rowFactory = RowFactory.DEFAULT;
+    private LocalResultFactory resultFactory = LocalResultFactory.DEFAULT;
+
+    private Authenticator authenticator;
 
     public Database(ConnectionInfo ci, String cipher) {
-        META_LOCK_DEBUGGING.set(null);
-        META_LOCK_DEBUGGING_STACK.set(null);
+        if (ASSERT) {
+            META_LOCK_DEBUGGING.set(null);
+            META_LOCK_DEBUGGING_DB.set(null);
+            META_LOCK_DEBUGGING_STACK.set(null);
+        }
         String name = ci.getName();
         this.dbSettings = ci.getDbSettings();
         this.reconnectCheckDelayNs = TimeUnit.MILLISECONDS.toNanos(dbSettings.reconnectCheckDelay);
@@ -257,16 +287,19 @@ public class Database implements DataHandler {
         }
         String modeName = ci.removeProperty("MODE", null);
         if (modeName != null) {
-            this.mode = Mode.getInstance(modeName);
+            mode = Mode.getInstance(modeName);
+            if (mode == null) {
+                throw DbException.get(ErrorCode.UNKNOWN_MODE_1, modeName);
+            }
         }
-        this.multiVersion =
-                ci.getProperty("MVCC", dbSettings.mvStore);
         this.logMode =
                 ci.getProperty("LOG", PageStore.LOG_MODE_SYNC);
         this.javaObjectSerializerName =
                 ci.getProperty("JAVA_OBJECT_SERIALIZER", null);
         this.multiThreaded =
-                ci.getProperty("MULTI_THREADED", false);
+                ci.getProperty("MULTI_THREADED", dbSettings.mvStore);
+        this.allowBuiltinAliasOverride =
+                ci.getProperty("BUILTIN_ALIAS_OVERRIDE", false);
         boolean closeAtVmShutdown =
                 dbSettings.dbCloseOnExit;
         int traceLevelFile =
@@ -277,47 +310,46 @@ public class Database implements DataHandler {
                 TraceSystem.DEFAULT_TRACE_LEVEL_SYSTEM_OUT);
         this.cacheType = StringUtils.toUpperEnglish(
                 ci.removeProperty("CACHE_TYPE", Constants.CACHE_TYPE_DEFAULT));
-        openDatabase(traceLevelFile, traceLevelSystemOut, closeAtVmShutdown);
+        openDatabase(traceLevelFile, traceLevelSystemOut, closeAtVmShutdown, ci);
     }
 
     private void openDatabase(int traceLevelFile, int traceLevelSystemOut,
-            boolean closeAtVmShutdown) {
+            boolean closeAtVmShutdown, ConnectionInfo ci) {
         try {
-            open(traceLevelFile, traceLevelSystemOut);
+            open(traceLevelFile, traceLevelSystemOut, ci);
             if (closeAtVmShutdown) {
-                try {
-                    closeOnExit = new DatabaseCloser(this, 0, true);
-                    Runtime.getRuntime().addShutdownHook(closeOnExit);
-                } catch (IllegalStateException e) {
-                    // shutdown in progress - just don't register the handler
-                    // (maybe an application wants to write something into a
-                    // database at shutdown time)
-                } catch (SecurityException  e) {
-                    // applets may not do that - ignore
-                    // Google App Engine doesn't allow
-                    // to instantiate classes that extend Thread
-                }
+                OnExitDatabaseCloser.register(this);
             }
         } catch (Throwable e) {
-            if (e instanceof OutOfMemoryError) {
-                e.fillInStackTrace();
-            }
-            boolean alreadyOpen = e instanceof DbException
-                    && ((DbException) e).getErrorCode() == ErrorCode.DATABASE_ALREADY_OPEN_1;
-            if (alreadyOpen) {
-                stopServer();
-            }
-
-            if (traceSystem != null) {
-                if (e instanceof DbException && !alreadyOpen) {
-                    // only write if the database is not already in use
-                    trace.error(e, "opening {0}", databaseName);
+            try {
+                if (e instanceof OutOfMemoryError) {
+                    e.fillInStackTrace();
                 }
-                traceSystem.close();
+                boolean alreadyOpen = e instanceof DbException
+                        && ((DbException) e).getErrorCode() == ErrorCode.DATABASE_ALREADY_OPEN_1;
+                if (alreadyOpen) {
+                    stopServer();
+                }
+
+                if (traceSystem != null) {
+                    if (e instanceof DbException && !alreadyOpen) {
+                        // only write if the database is not already in use
+                        trace.error(e, "opening {0}", databaseName);
+                    }
+                    traceSystem.close();
+                }
+                closeOpenFilesAndUnlock(false);
+            } catch(Throwable ex) {
+                e.addSuppressed(ex);
             }
-            closeOpenFilesAndUnlock(false);
             throw DbException.convert(e);
         }
+    }
+
+    public int getLockTimeout() {
+        Setting setting = findSetting(
+                SetTypes.getTypeName(SetTypes.DEFAULT_LOCK_TIMEOUT));
+        return setting == null ? Constants.INITIAL_LOCK_TIMEOUT : setting.getIntValue();
     }
 
     /**
@@ -339,6 +371,14 @@ public class Database implements DataHandler {
         this.rowFactory = rowFactory;
     }
 
+    public LocalResultFactory getResultFactory() {
+        return resultFactory;
+    }
+
+    public void setResultFactory(LocalResultFactory resultFactory) {
+        this.resultFactory = resultFactory;
+    }
+
     public static void setInitialPowerOffCount(int count) {
         initialPowerOffCount = count;
     }
@@ -350,13 +390,13 @@ public class Database implements DataHandler {
         powerOffCount = count;
     }
 
-    public MVTableEngine.Store getMvStore() {
-        return mvStore;
+    public MVTableEngine.Store getStore() {
+        return store;
     }
 
-    public void setMvStore(MVTableEngine.Store mvStore) {
-        this.mvStore = mvStore;
-        this.retentionTime = mvStore.getStore().getRetentionTime();
+    public void setStore(MVTableEngine.Store store) {
+        this.store = store;
+        this.retentionTime = store.getMvStore().getRetentionTime();
     }
 
     /**
@@ -368,12 +408,12 @@ public class Database implements DataHandler {
      */
     public boolean areEqual(Value a, Value b) {
         // can not use equals because ValueDecimal 0.0 is not equal to 0.00.
-        return a.compareTo(b, compareMode) == 0;
+        return a.compareTo(b, mode, compareMode) == 0;
     }
 
     /**
-     * Compare two values with the current comparison mode. The values may not
-     * be of the same type.
+     * Compare two values with the current comparison mode. The values may have
+     * different data types including NULL.
      *
      * @param a the first value
      * @param b the second value
@@ -381,7 +421,22 @@ public class Database implements DataHandler {
      *         1 otherwise
      */
     public int compare(Value a, Value b) {
-        return a.compareTo(b, compareMode);
+        return a.compareTo(b, mode, compareMode);
+    }
+
+    /**
+     * Compare two values with the current comparison mode. The values may have
+     * different data types including NULL.
+     *
+     * @param a the first value
+     * @param b the second value
+     * @param forEquality perform only check for equality (= or &lt;&gt;)
+     * @return 0 if both values are equal, -1 if the first value is smaller, 1
+     *         if the second value is larger, {@link Integer#MIN_VALUE} if order
+     *         is not defined due to NULL comparison
+     */
+    public int compareWithNull(Value a, Value b, boolean forEquality) {
+        return a.compareWithNull(b, forEquality, mode, compareMode);
     }
 
     /**
@@ -419,7 +474,7 @@ public class Database implements DataHandler {
                 if (now > reconnectCheckNext) {
                     if (pending) {
                         String pos = pageStore == null ?
-                                null : "" + pageStore.getWriteCountTotal();
+                                null : Long.toString(pageStore.getWriteCountTotal());
                         lock.setProperty("logPos", pos);
                         lock.save();
                     }
@@ -441,7 +496,7 @@ public class Database implements DataHandler {
                 }
             }
             String pos = pageStore == null ?
-                    null : "" + pageStore.getWriteCountTotal();
+                    null : Long.toString(pageStore.getWriteCountTotal());
             lock.setProperty("logPos", pos);
             if (pending) {
                 lock.setProperty("changePending", "true-" + Math.random());
@@ -506,16 +561,18 @@ public class Database implements DataHandler {
             try {
                 powerOffCount = -1;
                 stopWriter();
-                if (mvStore != null) {
-                    mvStore.closeImmediately();
+                if (store != null) {
+                    store.closeImmediately();
                 }
-                if (pageStore != null) {
-                    try {
-                        pageStore.close();
-                    } catch (DbException e) {
-                        // ignore
+                synchronized(this) {
+                    if (pageStore != null) {
+                        try {
+                            pageStore.close();
+                        } catch (DbException e) {
+                            // ignore
+                        }
+                        pageStore = null;
                     }
-                    pageStore = null;
                 }
                 if (lock != null) {
                     stopServer();
@@ -600,13 +657,14 @@ public class Database implements DataHandler {
                 n = tokenizer.nextToken();
             }
         }
-        if (n == null || n.length() == 0) {
+        if (n == null || n.isEmpty()) {
             n = "unnamed";
         }
-        return dbSettings.databaseToUpper ? StringUtils.toUpperEnglish(n) : n;
+        return dbSettings.databaseToUpper ? StringUtils.toUpperEnglish(n)
+                : dbSettings.databaseToLower ? StringUtils.toLowerEnglish(n) : n;
     }
 
-    private synchronized void open(int traceLevelFile, int traceLevelSystemOut) {
+    private synchronized void open(int traceLevelFile, int traceLevelSystemOut, ConnectionInfo ci) {
         if (persistent) {
             String dataFileName = databaseName + Constants.SUFFIX_OLD_DATABASE_FILE;
             boolean existsData = FileUtils.exists(dataFileName);
@@ -629,6 +687,9 @@ public class Database implements DataHandler {
             }
             if (existsPage && !existsMv) {
                 dbSettings.mvStore = false;
+                // Need to re-init this because the first time we do it we don't
+                // know if we have an mvstore or a pagestore.
+                multiThreaded = ci.getProperty("MULTI_THREADED", false);
             }
             if (readOnly) {
                 if (traceLevelFile >= TraceSystem.DEBUG) {
@@ -651,8 +712,7 @@ public class Database implements DataHandler {
                 if (readOnly ||
                         fileLockMethod == FileLockMethod.NO ||
                         fileLockMethod == FileLockMethod.SERIALIZED ||
-                        fileLockMethod == FileLockMethod.FS ||
-                        !persistent) {
+                        fileLockMethod == FileLockMethod.FS) {
                     throw DbException.getUnsupportedException(
                             "autoServerMode && (readOnly || " +
                             "fileLockMethod == NO || " +
@@ -709,7 +769,7 @@ public class Database implements DataHandler {
                 getPageStore();
             }
             starting = false;
-            if (mvStore == null) {
+            if (store == null) {
                 writer = WriterThread.create(this, writeDelay);
             } else {
                 setWriteDelay(writeDelay);
@@ -725,13 +785,18 @@ public class Database implements DataHandler {
                 getPageStore();
             }
         }
+        if(store != null) {
+            store.getTransactionStore().init();
+        }
         systemUser = new User(this, 0, SYSTEM_USER_NAME, true);
-        mainSchema = new Schema(this, 0, Constants.SCHEMA_MAIN, systemUser, true);
-        infoSchema = new Schema(this, -1, "INFORMATION_SCHEMA", systemUser, true);
+        mainSchema = new Schema(this, Constants.MAIN_SCHEMA_ID, sysIdentifier(Constants.SCHEMA_MAIN), systemUser,
+                true);
+        infoSchema = new Schema(this, Constants.INFORMATION_SCHEMA_ID, sysIdentifier("INFORMATION_SCHEMA"), systemUser,
+                true);
         schemas.put(mainSchema.getName(), mainSchema);
         schemas.put(infoSchema.getName(), infoSchema);
-        publicRole = new Role(this, 0, Constants.PUBLIC_ROLE_NAME, true);
-        roles.put(Constants.PUBLIC_ROLE_NAME, publicRole);
+        publicRole = new Role(this, 0, sysIdentifier(Constants.PUBLIC_ROLE_NAME), true);
+        roles.put(publicRole.getName(), publicRole);
         systemUser.setAdmin(true);
         systemSession = new Session(this, systemUser, ++nextSessionId);
         lobSession = new Session(this, systemUser, ++nextSessionId);
@@ -755,15 +820,17 @@ public class Database implements DataHandler {
         data.create = create;
         data.isHidden = true;
         data.session = systemSession;
+        starting = true;
         meta = mainSchema.createTable(data);
+        handleUpgradeIssues();
         IndexColumn[] pkCols = IndexColumn.wrap(new Column[] { columnId });
         metaIdIndex = meta.addIndex(systemSession, "SYS_ID",
                 0, pkCols, IndexType.createPrimaryKey(
                 false, false), true, null);
+        systemSession.commit(true);
         objectIds.set(0);
-        starting = true;
         Cursor cursor = metaIdIndex.find(systemSession, null, null);
-        ArrayList<MetaRecord> records = New.arrayList();
+        ArrayList<MetaRecord> records = new ArrayList<>((int) metaIdIndex.getRowCountApproximation());
         while (cursor.next()) {
             MetaRecord rec = new MetaRecord(cursor.get());
             objectIds.set(rec.getId());
@@ -775,9 +842,10 @@ public class Database implements DataHandler {
                 rec.execute(this, systemSession, eventListener);
             }
         }
-        if (mvStore != null) {
-            mvStore.initTransactions();
-            mvStore.removeTemporaryMaps(objectIds);
+        systemSession.commit(true);
+        if (store != null) {
+            store.getTransactionStore().endLeftoverTransactions();
+            store.removeTemporaryMaps(objectIds);
         }
         recompileInvalidViews(systemSession);
         starting = false;
@@ -790,9 +858,11 @@ public class Database implements DataHandler {
                 lockMeta(systemSession);
                 addDatabaseObject(systemSession, setting);
             }
+            setSortSetting(SetTypes.BINARY_COLLATION, SysProperties.SORT_BINARY_UNSIGNED, true);
+            setSortSetting(SetTypes.UUID_COLLATION, SysProperties.SORT_UUID_UNSIGNED, false);
             // mark all ids used in the page store
             if (pageStore != null) {
-                BitField f = pageStore.getObjectIds();
+                BitSet f = pageStore.getObjectIds();
                 for (int i = 0, len = f.length(); i < len; i++) {
                     if (f.get(i) && !objectIds.get(i)) {
                         trace.info("unused object id: " + i);
@@ -807,6 +877,74 @@ public class Database implements DataHandler {
         trace.info("opened {0}", databaseName);
         if (checkpointAllowed > 0) {
             afterWriting();
+        }
+    }
+
+    /**
+     * Preserves a current default value of a sorting setting if it is not the
+     * same as default for older versions of H2 and if it was not modified by
+     * user.
+     *
+     * @param type
+     *            setting type
+     * @param defValue
+     *            current default value (may be modified via system properties)
+     * @param oldDefault
+     *            default value for old versions
+     */
+    private void setSortSetting(int type, boolean defValue, boolean oldDefault) {
+        if (defValue == oldDefault) {
+            return;
+        }
+        String name = SetTypes.getTypeName(type);
+        if (settings.get(name) == null) {
+            Setting setting = new Setting(this, allocateObjectId(), name);
+            setting.setStringValue(defValue ? CompareMode.UNSIGNED : CompareMode.SIGNED);
+            lockMeta(systemSession);
+            addDatabaseObject(systemSession, setting);
+        }
+    }
+
+    private void handleUpgradeIssues() {
+        if (store != null && !isReadOnly()) {
+            MVStore mvStore = store.getMvStore();
+            // Version 1.4.197 erroneously handles index on SYS_ID.ID as secondary
+            // and does not delegate to scan index as it should.
+            // This code will try to fix that by converging ROW_ID and ID,
+            // since they may have got out of sync, and by removing map "index.0",
+            // which corresponds to a secondary index.
+            if (mvStore.hasMap("index.0")) {
+                Index scanIndex = meta.getScanIndex(systemSession);
+                Cursor curs = scanIndex.find(systemSession, null, null);
+                List<Row> allMetaRows = new ArrayList<>();
+                boolean needRepair = false;
+                while (curs.next()) {
+                    Row row = curs.get();
+                    allMetaRows.add(row);
+                    long rowId = row.getKey();
+                    int id = row.getValue(0).getInt();
+                    if (id != rowId) {
+                        needRepair = true;
+                        row.setKey(id);
+                    }
+                }
+                if (needRepair) {
+                    Row[] array = allMetaRows.toArray(new Row[0]);
+                    Arrays.sort(array, new Comparator<Row>() {
+                        @Override
+                        public int compare(Row o1, Row o2) {
+                            return Integer.compare(o1.getValue(0).getInt(), o2.getValue(0).getInt());
+                        }
+                    });
+                    meta.truncate(systemSession);
+                    for (Row row : array) {
+                        meta.addRow(systemSession, row);
+                    }
+                    systemSession.commit(true);
+                }
+                mvStore.removeMap("index.0");
+                mvStore.commit();
+            }
         }
     }
 
@@ -875,22 +1013,19 @@ public class Database implements DataHandler {
         }
     }
 
-    private synchronized void addMeta(Session session, DbObject obj) {
+    private void addMeta(Session session, DbObject obj) {
+        assert Thread.holdsLock(this);
         int id = obj.getId();
         if (id > 0 && !starting && !obj.isTemporary()) {
             Row r = meta.getTemplateRow();
-            MetaRecord rec = new MetaRecord(obj);
-            rec.setRecord(r);
-            objectIds.set(id);
+            MetaRecord.populateRowFromDBObject(obj, r);
+            synchronized (objectIds) {
+                objectIds.set(id);
+            }
             if (SysProperties.CHECK) {
                 verifyMetaLocked(session);
             }
             meta.addRow(session, r);
-            if (isMultiVersion()) {
-                // TODO this should work without MVCC, but avoid risks at the
-                // moment
-                session.log(meta, UndoLogRecord.INSERT, r);
-            }
         }
     }
 
@@ -920,18 +1055,25 @@ public class Database implements DataHandler {
         if (meta == null) {
             return true;
         }
-        if (SysProperties.CHECK2) {
-            final Session prev = META_LOCK_DEBUGGING.get();
-            if (prev == null) {
-                META_LOCK_DEBUGGING.set(session);
-                META_LOCK_DEBUGGING_STACK.set(new Throwable("Last meta lock granted in this stack trace, "+
-                        "this is debug information for following IllegalStateException"));
-            } else if (prev != session) {
-                META_LOCK_DEBUGGING_STACK.get().printStackTrace();
-                throw new IllegalStateException("meta currently locked by "
-                        + prev +", sessionid="+ prev.getId()
-                        + " and trying to be locked by different session, "
-                        + session +", sessionid="+ session.getId() + " on same thread");
+        if (ASSERT) {
+            // If we are locking two different databases in the same stack, just ignore it.
+            // This only happens in TestLinkedTable where we connect to another h2 DB in the
+            // same process.
+            if (META_LOCK_DEBUGGING_DB.get() != null
+                    && META_LOCK_DEBUGGING_DB.get() != this) {
+                final Session prev = META_LOCK_DEBUGGING.get();
+                if (prev == null) {
+                    META_LOCK_DEBUGGING.set(session);
+                    META_LOCK_DEBUGGING_DB.set(this);
+                    META_LOCK_DEBUGGING_STACK.set(new Throwable("Last meta lock granted in this stack trace, "+
+                            "this is debug information for following IllegalStateException"));
+                } else if (prev != session) {
+                    META_LOCK_DEBUGGING_STACK.get().printStackTrace();
+                    throw new IllegalStateException("meta currently locked by "
+                            + prev +", sessionid="+ prev.getId()
+                            + " and trying to be locked by different session, "
+                            + session +", sessionid="+ session.getId() + " on same thread");
+                }
             }
         }
         return meta.lock(session, true, true);
@@ -943,9 +1085,11 @@ public class Database implements DataHandler {
      * @param session the session
      */
     public void unlockMeta(Session session) {
-        unlockMetaDebug(session);
-        meta.unlock(session);
-        session.unlock(meta);
+        if (meta != null) {
+            unlockMetaDebug(session);
+            meta.unlock(session);
+            session.unlock(meta);
+        }
     }
 
     /**
@@ -955,9 +1099,10 @@ public class Database implements DataHandler {
      * @param session the session
      */
     public void unlockMetaDebug(Session session) {
-        if (SysProperties.CHECK2) {
+        if (ASSERT) {
             if (META_LOCK_DEBUGGING.get() == session) {
                 META_LOCK_DEBUGGING.set(null);
+                META_LOCK_DEBUGGING_DB.set(null);
                 META_LOCK_DEBUGGING_STACK.set(null);
             }
         }
@@ -969,36 +1114,53 @@ public class Database implements DataHandler {
      * @param session the session
      * @param id the id of the object to remove
      */
-    public synchronized void removeMeta(Session session, int id) {
+    public void removeMeta(Session session, int id) {
         if (id > 0 && !starting) {
             SearchRow r = meta.getTemplateSimpleRow(false);
             r.setValue(0, ValueInt.get(id));
             boolean wasLocked = lockMeta(session);
-            Cursor cursor = metaIdIndex.find(session, r, r);
-            if (cursor.next()) {
-                if (SysProperties.CHECK) {
+            try {
+                Cursor cursor = metaIdIndex.find(session, r, r);
+                if (cursor.next()) {
                     if (lockMode != Constants.LOCK_MODE_OFF && !wasLocked) {
                         throw DbException.throwInternalError();
                     }
+                    Row found = cursor.get();
+                    meta.removeRow(session, found);
+                    if (SysProperties.CHECK) {
+                        checkMetaFree(session, id);
+                    }
                 }
-                Row found = cursor.get();
-                meta.removeRow(session, found);
-                if (isMultiVersion()) {
-                    // TODO this should work without MVCC, but avoid risks at
-                    // the moment
-                    session.log(meta, UndoLogRecord.DELETE, found);
+            } finally {
+                if (!wasLocked) {
+                    // must not keep the lock if it was not locked
+                    // otherwise updating sequences may cause a deadlock
+                    unlockMeta(session);
                 }
-                if (SysProperties.CHECK) {
-                    checkMetaFree(session, id);
-                }
-            } else if (!wasLocked) {
-                unlockMetaDebug(session);
-                // must not keep the lock if it was not locked
-                // otherwise updating sequences may cause a deadlock
-                meta.unlock(session);
-                session.unlock(meta);
             }
-            objectIds.clear(id);
+            if (isMVStore()) {
+                // release of the object id has to be postponed until the end of the transaction,
+                // otherwise it might be re-used prematurely, and it would make
+                // rollback impossible or lead to MVMaps name collision,
+                // so until then ids are accumulated within session
+                session.scheduleDatabaseObjectIdForRelease(id);
+            } else {
+                // but PageStore, on the other hand, for reasons unknown to me,
+                // requires immediate id release
+                synchronized (this) {
+                    objectIds.clear(id);
+                }
+            }
+        }
+    }
+
+    /**
+     * Mark some database ids as unused.
+     * @param idsToRelease the ids to release
+     */
+    void releaseDatabaseObjectIds(BitSet idsToRelease) {
+        synchronized (objectIds) {
+            objectIds.andNot(idsToRelease);
         }
     }
 
@@ -1021,8 +1183,8 @@ public class Database implements DataHandler {
         case DbObject.SCHEMA:
             result = schemas;
             break;
-        case DbObject.USER_DATATYPE:
-            result = userDataTypes;
+        case DbObject.DOMAIN:
+            result = domains;
             break;
         case DbObject.COMMENT:
             result = comments;
@@ -1113,7 +1275,7 @@ public class Database implements DataHandler {
      * @return the role or null
      */
     public Role findRole(String roleName) {
-        return roles.get(roleName);
+        return roles.get(StringUtils.toUpperEnglish(roleName));
     }
 
     /**
@@ -1147,17 +1309,17 @@ public class Database implements DataHandler {
      * @return the user or null
      */
     public User findUser(String name) {
-        return users.get(name);
+        return users.get(StringUtils.toUpperEnglish(name));
     }
 
     /**
-     * Get the user defined data type if it exists, or null if not.
+     * Get the domain if it exists, or null if not.
      *
-     * @param name the name of the user defined data type
-     * @return the user defined data type or null
+     * @param name the name of the domain
+     * @return the domain or null
      */
-    public UserDataType findUserDataType(String name) {
-        return userDataTypes.get(name);
+    public Domain findDomain(String name) {
+        return domains.get(name);
     }
 
     /**
@@ -1220,10 +1382,7 @@ public class Database implements DataHandler {
             } else if (closeDelay < 0) {
                 return;
             } else {
-                delayedCloser = new DatabaseCloser(this, closeDelay * 1000, false);
-                delayedCloser.setName("H2 Close Delay " + getShortName());
-                delayedCloser.setDaemon(true);
-                delayedCloser.start();
+                delayedCloser = new DelayedDatabaseCloser(this, closeDelay * 1000);
             }
         }
         if (session != systemSession &&
@@ -1233,14 +1392,11 @@ public class Database implements DataHandler {
     }
 
     private synchronized void closeAllSessionsException(Session except) {
-        Session[] all = userSessions.toArray(new Session[userSessions.size()]);
+        Session[] all = userSessions.toArray(EMPTY_SESSION_ARRAY);
         for (Session s : all) {
             if (s != except) {
                 try {
-                    // must roll back, otherwise the session is removed and
-                    // the transaction log that contains its uncommitted
-                    // operations as well
-                    s.rollback();
+                    // this will rollback outstanding transaction
                     s.close();
                 } catch (DbException e) {
                     trace.error(e, "disconnecting session #{0}", s.getId());
@@ -1256,12 +1412,27 @@ public class Database implements DataHandler {
      *            hook
      */
     void close(boolean fromShutdownHook) {
+        DbException b = backgroundException.getAndSet(null);
+        try {
+            closeImpl(fromShutdownHook);
+        } catch (Throwable t) {
+            if (b != null) {
+                t.addSuppressed(b);
+            }
+            throw t;
+        }
+        if (b != null) {
+            // wrap the exception, so we see it was thrown here
+            throw DbException.get(b.getErrorCode(), b, b.getMessage());
+        }
+    }
+
+    private void closeImpl(boolean fromShutdownHook) {
         try {
             synchronized (this) {
                 if (closing) {
                     return;
                 }
-                throwLastBackgroundException();
                 if (fileLockMethod == FileLockMethod.SERIALIZED &&
                         !reconnectChangePending) {
                     // another connection may have written something - don't write
@@ -1296,8 +1467,10 @@ public class Database implements DataHandler {
                     }
                     closing = true;
                 }
+                if (!this.isReadOnly()) {
+                    removeOrphanedLobs();
+                }
             }
-            removeOrphanedLobs();
             try {
                 if (systemSession != null) {
                     if (powerOffCount != -1) {
@@ -1339,17 +1512,7 @@ public class Database implements DataHandler {
             }
             trace.info("closed");
             traceSystem.close();
-            if (closeOnExit != null) {
-                closeOnExit.reset();
-                try {
-                    Runtime.getRuntime().removeShutdownHook(closeOnExit);
-                } catch (IllegalStateException e) {
-                    // ignore
-                } catch (SecurityException e) {
-                    // applets may not do that - ignore
-                }
-                closeOnExit = null;
-            }
+            OnExitDatabaseCloser.unregister(this);
             if (deleteFilesOnDisconnect && persistent) {
                 deleteFilesOnDisconnect = false;
                 try {
@@ -1372,7 +1535,7 @@ public class Database implements DataHandler {
         }
         boolean lobStorageIsUsed = infoSchema.findTableOrView(
                 systemSession, LobStorageBackend.LOB_DATA_TABLE) != null;
-        lobStorageIsUsed |= mvStore != null;
+        lobStorageIsUsed |= store != null;
         if (!lobStorageIsUsed) {
             return;
         }
@@ -1398,88 +1561,101 @@ public class Database implements DataHandler {
      * @param flush whether writing is allowed
      */
     private synchronized void closeOpenFilesAndUnlock(boolean flush) {
-        stopWriter();
-        if (pageStore != null) {
-            if (flush) {
-                try {
-                    pageStore.checkpoint();
-                    if (!readOnly) {
-                        lockMeta(pageStore.getPageStoreSession());
-                        pageStore.compact(compactMode);
-                        unlockMeta(pageStore.getPageStoreSession());
+        try {
+            stopWriter();
+            if (pageStore != null) {
+                if (flush) {
+                    try {
+                        pageStore.checkpoint();
+                        if (!readOnly) {
+                            lockMeta(pageStore.getPageStoreSession());
+                            pageStore.compact(compactMode);
+                            unlockMeta(pageStore.getPageStoreSession());
+                        }
+                    } catch (DbException e) {
+                        if (ASSERT) {
+                            int code = e.getErrorCode();
+                            if (code != ErrorCode.DATABASE_IS_CLOSED &&
+                                    code != ErrorCode.LOCK_TIMEOUT_1 &&
+                                    code != ErrorCode.IO_EXCEPTION_2) {
+                                e.printStackTrace();
+                            }
+                        }
+                        trace.error(e, "close");
+                    } catch (Throwable t) {
+                        if (ASSERT) {
+                            t.printStackTrace();
+                        }
+                        trace.error(t, "close");
                     }
-                } catch (DbException e) {
-                    if (SysProperties.CHECK2) {
-                        int code = e.getErrorCode();
-                        if (code != ErrorCode.DATABASE_IS_CLOSED &&
-                                code != ErrorCode.LOCK_TIMEOUT_1 &&
-                                code != ErrorCode.IO_EXCEPTION_2) {
-                            e.printStackTrace();
+                }
+            }
+            reconnectModified(false);
+            if (store != null) {
+                MVStore mvStore = store.getMvStore();
+                if (mvStore != null && !mvStore.isClosed()) {
+                    boolean compactFully =
+                            compactMode == CommandInterface.SHUTDOWN_COMPACT ||
+                            compactMode == CommandInterface.SHUTDOWN_DEFRAG ||
+                            getSettings().defragAlways;
+                    if (!compactFully && !mvStore.isReadOnly()) {
+                        if (dbSettings.maxCompactTime > 0) {
+                            try {
+                                store.compactFile(dbSettings.maxCompactTime);
+                            } catch (Throwable t) {
+                                trace.error(t, "compactFile");
+                            }
+                        } else {
+                            mvStore.commit();
                         }
                     }
-                    trace.error(e, "close");
-                } catch (Throwable t) {
-                    if (SysProperties.CHECK2) {
-                        t.printStackTrace();
-                    }
-                    trace.error(t, "close");
+                    store.close(compactFully);
                 }
             }
-        }
-        reconnectModified(false);
-        if (mvStore != null) {
-            long maxCompactTime = dbSettings.maxCompactTime;
-            if (compactMode == CommandInterface.SHUTDOWN_COMPACT) {
-                mvStore.compactFile(dbSettings.maxCompactTime);
-            } else if (compactMode == CommandInterface.SHUTDOWN_DEFRAG) {
-                maxCompactTime = Long.MAX_VALUE;
-            } else if (getSettings().defragAlways) {
-                maxCompactTime = Long.MAX_VALUE;
+            if (systemSession != null) {
+                systemSession.close();
+                systemSession = null;
             }
-            mvStore.close(maxCompactTime);
-        }
-        closeFiles();
-        if (persistent && lock == null &&
-                fileLockMethod != FileLockMethod.NO &&
-                fileLockMethod != FileLockMethod.FS) {
-            // everything already closed (maybe in checkPowerOff)
-            // don't delete temp files in this case because
-            // the database could be open now (even from within another process)
-            return;
-        }
-        if (persistent) {
-            deleteOldTempFiles();
-        }
-        if (systemSession != null) {
-            systemSession.close();
-            systemSession = null;
-        }
-        if (lobSession != null) {
-            lobSession.close();
-            lobSession = null;
-        }
-        if (lock != null) {
-            if (fileLockMethod == FileLockMethod.SERIALIZED) {
-                // wait before deleting the .lock file,
-                // otherwise other connections can not detect that
-                if (lock.load().containsKey("changePending")) {
-                    try {
-                        Thread.sleep(TimeUnit.NANOSECONDS
-                                .toMillis((long) (reconnectCheckDelayNs * 1.1)));
-                    } catch (InterruptedException e) {
-                        trace.error(e, "close");
+            if (lobSession != null) {
+                lobSession.close();
+                lobSession = null;
+            }
+            closeFiles();
+            if (persistent && lock == null &&
+                    fileLockMethod != FileLockMethod.NO &&
+                    fileLockMethod != FileLockMethod.FS) {
+                // everything already closed (maybe in checkPowerOff)
+                // don't delete temp files in this case because
+                // the database could be open now (even from within another process)
+                return;
+            }
+            if (persistent) {
+                deleteOldTempFiles();
+            }
+        } finally {
+            if (lock != null) {
+                if (fileLockMethod == FileLockMethod.SERIALIZED) {
+                    // wait before deleting the .lock file,
+                    // otherwise other connections can not detect that
+                    if (lock.load().containsKey("changePending")) {
+                        try {
+                            Thread.sleep(TimeUnit.NANOSECONDS
+                                    .toMillis((long) (reconnectCheckDelayNs * 1.1)));
+                        } catch (InterruptedException e) {
+                            trace.error(e, "close");
+                        }
                     }
                 }
+                lock.unlock();
+                lock = null;
             }
-            lock.unlock();
-            lock = null;
         }
     }
 
     private synchronized void closeFiles() {
         try {
-            if (mvStore != null) {
-                mvStore.closeImmediately();
+            if (store != null) {
+                store.closeImmediately();
             }
             if (pageStore != null) {
                 pageStore.close();
@@ -1504,10 +1680,23 @@ public class Database implements DataHandler {
      *
      * @return the id
      */
-    public synchronized int allocateObjectId() {
-        int i = objectIds.nextClearBit(0);
-        objectIds.set(i);
+    public int allocateObjectId() {
+        Object lock = isMVStore() ? objectIds : this;
+        int i;
+        synchronized (lock) {
+            i = objectIds.nextClearBit(0);
+            objectIds.set(i);
+        }
         return i;
+    }
+
+    /**
+     * Returns main schema (usually PUBLIC).
+     *
+     * @return main schema (usually PUBLIC)
+     */
+    public Schema getMainSchema() {
+        return mainSchema;
     }
 
     public ArrayList<UserAggregate> getAllAggregates() {
@@ -1540,9 +1729,9 @@ public class Database implements DataHandler {
      */
     public ArrayList<SchemaObject> getAllSchemaObjects() {
         initMetaTables();
-        ArrayList<SchemaObject> list = New.arrayList();
+        ArrayList<SchemaObject> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
-            list.addAll(schema.getAll());
+            schema.getAll(list);
         }
         return list;
     }
@@ -1557,9 +1746,9 @@ public class Database implements DataHandler {
         if (type == DbObject.TABLE_OR_VIEW) {
             initMetaTables();
         }
-        ArrayList<SchemaObject> list = New.arrayList();
+        ArrayList<SchemaObject> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
-            list.addAll(schema.getAll(type));
+            schema.getAll(type, list);
         }
         return list;
     }
@@ -1576,7 +1765,7 @@ public class Database implements DataHandler {
         if (includeMeta) {
             initMetaTables();
         }
-        ArrayList<Table> list = New.arrayList();
+        ArrayList<Table> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
             list.addAll(schema.getAllTablesAndViews());
         }
@@ -1589,7 +1778,7 @@ public class Database implements DataHandler {
      * @return all objects of that type
      */
     public ArrayList<TableSynonym> getAllSynonyms() {
-        ArrayList<TableSynonym> list = New.arrayList();
+        ArrayList<TableSynonym> list = new ArrayList<>();
         for (Schema schema : schemas.values()) {
             list.addAll(schema.getAllSynonyms());
         }
@@ -1603,7 +1792,8 @@ public class Database implements DataHandler {
      * @return the list
      */
     public ArrayList<Table> getTableOrViewByName(String name) {
-        ArrayList<Table> list = New.arrayList();
+        // we expect that at most one table matches, at least in most cases
+        ArrayList<Table> list = new ArrayList<>(1);
         for (Schema schema : schemas.values()) {
             Table table = schema.getTableOrViewByName(name);
             if (table != null) {
@@ -1622,8 +1812,8 @@ public class Database implements DataHandler {
         return new ArrayList<>(settings.values());
     }
 
-    public ArrayList<UserDataType> getAllUserDataTypes() {
-        return new ArrayList<>(userDataTypes.values());
+    public ArrayList<Domain> getAllDomains() {
+        return new ArrayList<>(domains.values());
     }
 
     public ArrayList<User> getAllUsers() {
@@ -1692,14 +1882,35 @@ public class Database implements DataHandler {
      * @param obj the database object
      */
     public void updateMeta(Session session, DbObject obj) {
-        lockMeta(session);
-        synchronized (this) {
+        if (isMVStore()) {
             int id = obj.getId();
-            removeMeta(session, id);
-            addMeta(session, obj);
-            // for temporary objects
             if (id > 0) {
-                objectIds.set(id);
+                if (!starting && !obj.isTemporary()) {
+                    Row newRow = meta.getTemplateRow();
+                    MetaRecord.populateRowFromDBObject(obj, newRow);
+                    Row oldRow = metaIdIndex.getRow(session, id);
+                    if (oldRow != null) {
+                        meta.updateRow(session, oldRow, newRow);
+                    }
+                }
+                // for temporary objects
+                synchronized (objectIds) {
+                    objectIds.set(id);
+                }
+            }
+        } else {
+            boolean metaWasLocked = lockMeta(session);
+            synchronized (this) {
+                int id = obj.getId();
+                removeMeta(session, id);
+                addMeta(session, obj);
+                // for temporary objects
+                if(id > 0) {
+                    objectIds.set(id);
+                }
+            }
+            if (!metaWasLocked) {
+                unlockMeta(session);
             }
         }
     }
@@ -1756,9 +1967,6 @@ public class Database implements DataHandler {
             }
         }
         obj.checkRename();
-        int id = obj.getId();
-        lockMeta(session);
-        removeMeta(session, id);
         map.remove(obj.getName());
         obj.rename(newName);
         map.put(newName, obj);
@@ -1777,8 +1985,7 @@ public class Database implements DataHandler {
             if (!persistent) {
                 name = "memFS:" + name;
             }
-            return FileUtils.createTempFile(name,
-                    Constants.SUFFIX_TEMP_FILE, true, inTempDir);
+            return FileUtils.createTempFile(name, Constants.SUFFIX_TEMP_FILE, inTempDir);
         } catch (IOException e) {
             throw DbException.convertIOException(e, databaseName);
         }
@@ -1912,11 +2119,9 @@ public class Database implements DataHandler {
                 Table t = getDependentTable(obj, null);
                 if (t != null) {
                     obj.getSchema().add(obj);
-                    throw DbException.get(ErrorCode.CANNOT_DROP_2, obj.getSQL(),
-                            t.getSQL());
+                    throw DbException.get(ErrorCode.CANNOT_DROP_2, obj.getSQL(false), t.getSQL(false));
                 }
                 obj.removeChildrenAndResources(session);
-
             }
             removeMeta(session, id);
         }
@@ -1925,7 +2130,7 @@ public class Database implements DataHandler {
     /**
      * Check if this database is disk-based.
      *
-     * @return true if it is disk-based, false it it is in-memory only.
+     * @return true if it is disk-based, false if it is in-memory only.
      */
     public boolean isPersistent() {
         return persistent;
@@ -1942,10 +2147,10 @@ public class Database implements DataHandler {
         }
         cacheSize = kb;
         if (pageStore != null) {
-            pageStore.getCache().setMaxMemory(kb);
+            pageStore.setMaxCacheMemory(kb);
         }
-        if (mvStore != null) {
-            mvStore.setCacheSize(Math.max(1, kb));
+        if (store != null) {
+            store.setCacheSize(Math.max(1, kb));
         }
     }
 
@@ -2006,9 +2211,9 @@ public class Database implements DataHandler {
             // TODO check if MIN_WRITE_DELAY is a good value
             flushOnEachCommit = writeDelay < Constants.MIN_WRITE_DELAY;
         }
-        if (mvStore != null) {
+        if (store != null) {
             int millis = value < 0 ? 0 : value;
-            mvStore.getStore().setAutoCommitDelay(millis);
+            store.getMvStore().setAutoCommitDelay(millis);
         }
     }
 
@@ -2018,8 +2223,8 @@ public class Database implements DataHandler {
 
     public void setRetentionTime(int value) {
         retentionTime = value;
-        if (mvStore != null) {
-            mvStore.getStore().setRetentionTime(value);
+        if (store != null) {
+            store.getMvStore().setRetentionTime(value);
         }
     }
 
@@ -2046,8 +2251,8 @@ public class Database implements DataHandler {
      * @return the list
      */
     public ArrayList<InDoubtTransaction> getInDoubtTransactions() {
-        if (mvStore != null) {
-            return mvStore.getInDoubtTransactions();
+        if (store != null) {
+            return store.getInDoubtTransactions();
         }
         return pageStore == null ? null : pageStore.getInDoubtTransactions();
     }
@@ -2062,8 +2267,8 @@ public class Database implements DataHandler {
         if (readOnly) {
             return;
         }
-        if (mvStore != null) {
-            mvStore.prepareCommit(session, transaction);
+        if (store != null) {
+            store.prepareCommit(session, transaction);
             return;
         }
         if (pageStore != null) {
@@ -2089,28 +2294,30 @@ public class Database implements DataHandler {
     }
 
     private void throwLastBackgroundException() {
-        if (backgroundException != null) {
-            // we don't care too much about concurrency here,
-            // we just want to make sure the exception is _normally_
-            // not just logged to the .trace.db file
-            DbException b = backgroundException;
-            backgroundException = null;
-            if (b != null) {
-                // wrap the exception, so we see it was thrown here
-                throw DbException.get(b.getErrorCode(), b, b.getMessage());
-            }
+        DbException b = backgroundException.getAndSet(null);
+        if (b != null) {
+            // wrap the exception, so we see it was thrown here
+            throw DbException.get(b.getErrorCode(), b, b.getMessage());
         }
     }
 
     public void setBackgroundException(DbException e) {
-        if (backgroundException == null) {
-            backgroundException = e;
+        if (backgroundException.compareAndSet(null, e)) {
             TraceSystem t = getTraceSystem();
             if (t != null) {
                 t.getTrace(Trace.DATABASE).error(e, "flush");
             }
         }
     }
+
+    public Throwable getBackgroundException() {
+        IllegalStateException exception = store.getMvStore().getPanicException();
+        if(exception != null) {
+            return exception;
+        }
+        return backgroundException.getAndSet(null);
+    }
+
 
     /**
      * Flush all pending changes to the transaction log.
@@ -2122,11 +2329,11 @@ public class Database implements DataHandler {
         if (pageStore != null) {
             pageStore.flushLog();
         }
-        if (mvStore != null) {
+        if (store != null) {
             try {
-                mvStore.flush();
+                store.flush();
             } catch (RuntimeException e) {
-                backgroundException = DbException.convert(e);
+                backgroundException.compareAndSet(null, DbException.convert(e));
                 throw e;
             }
         }
@@ -2137,12 +2344,12 @@ public class Database implements DataHandler {
     }
 
     public void setEventListenerClass(String className) {
-        if (className == null || className.length() == 0) {
+        if (className == null || className.isEmpty()) {
             eventListener = null;
         } else {
             try {
                 eventListener = (DatabaseEventListener)
-                        JdbcUtils.loadUserClass(className).newInstance();
+                        JdbcUtils.loadUserClass(className).getDeclaredConstructor().newInstance();
                 String url = databaseURL;
                 if (cipher != null) {
                     url += ";CIPHER=" + cipher;
@@ -2200,8 +2407,8 @@ public class Database implements DataHandler {
         if (readOnly) {
             return;
         }
-        if (mvStore != null) {
-            mvStore.sync();
+        if (store != null) {
+            store.sync();
         }
         if (pageStore != null) {
             pageStore.sync();
@@ -2227,13 +2434,13 @@ public class Database implements DataHandler {
     public void setLockMode(int lockMode) {
         switch (lockMode) {
         case Constants.LOCK_MODE_OFF:
-            if (multiThreaded) {
-                // currently the combination of LOCK_MODE=0 and MULTI_THREADED
-                // is not supported. also see code in
+            if (multiThreaded && !isMVStore()) {
+                // Currently the combination of MV_STORE=FALSE, LOCK_MODE=0 and
+                // MULTI_THREADED=TRUE is not supported. Also see code in
                 // JdbcDatabaseMetaData#supportsTransactionIsolationLevel(int)
                 throw DbException.get(
                         ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
-                        "LOCK_MODE=0 & MULTI_THREADED");
+                        "MV_STORE=FALSE & LOCK_MODE=0 & MULTI_THREADED=TRUE");
             }
             break;
         case Constants.LOCK_MODE_READ_COMMITTED:
@@ -2250,7 +2457,7 @@ public class Database implements DataHandler {
         return lockMode;
     }
 
-    public synchronized void setCloseDelay(int value) {
+    public void setCloseDelay(int value) {
         this.closeDelay = value;
     }
 
@@ -2385,12 +2592,12 @@ public class Database implements DataHandler {
     }
 
     /**
-     * Check if multi version concurrency is enabled for this database.
+     * Check if MVStore backend is used for this database.
      *
-     * @return true if it is enabled
+     * @return {@code true} for MVStore, {@code false} for PageStore
      */
-    public boolean isMultiVersion() {
-        return multiVersion;
+    public boolean isMVStore() {
+        return dbSettings.mvStore;
     }
 
     /**
@@ -2420,19 +2627,12 @@ public class Database implements DataHandler {
 
     public void setMultiThreaded(boolean multiThreaded) {
         if (multiThreaded && this.multiThreaded != multiThreaded) {
-            if (multiVersion && mvStore == null) {
-                // currently the combination of MVCC and MULTI_THREADED is not
-                // supported
+            if (lockMode == Constants.LOCK_MODE_OFF && !isMVStore()) {
+                // Currently the combination of MV_STORE=FALSE, LOCK_MODE=0 and
+                // MULTI_THREADED=TRUE is not supported.
                 throw DbException.get(
                         ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
-                        "MVCC & MULTI_THREADED");
-            }
-            if (lockMode == 0) {
-                // currently the combination of LOCK_MODE=0 and MULTI_THREADED
-                // is not supported
-                throw DbException.get(
-                        ErrorCode.UNSUPPORTED_SETTING_COMBINATION,
-                        "LOCK_MODE=0 & MULTI_THREADED");
+                        "MV_STORE=FALSE & LOCK_MODE=0 & MULTI_THREADED=TRUE");
             }
         }
         this.multiThreaded = multiThreaded;
@@ -2518,6 +2718,7 @@ public class Database implements DataHandler {
      * Immediately close the database.
      */
     public void shutdownImmediately() {
+        closing = true;
         setPowerOffCount(1);
         try {
             checkPowerOff();
@@ -2534,28 +2735,31 @@ public class Database implements DataHandler {
 
     public PageStore getPageStore() {
         if (dbSettings.mvStore) {
-            if (mvStore == null) {
-                mvStore = MVTableEngine.init(this);
+            if (store == null) {
+                store = MVTableEngine.init(this);
             }
             return null;
         }
-        if (pageStore == null) {
-            pageStore = new PageStore(this, databaseName +
-                    Constants.SUFFIX_PAGE_FILE, accessModeData, cacheSize);
-            if (pageSize != Constants.DEFAULT_PAGE_SIZE) {
-                pageStore.setPageSize(pageSize);
+        synchronized (this) {
+            if (pageStore == null) {
+                pageStore = new PageStore(this, databaseName +
+                        Constants.SUFFIX_PAGE_FILE, accessModeData, cacheSize);
+                if (pageSize != Constants.DEFAULT_PAGE_SIZE) {
+                    pageStore.setPageSize(pageSize);
+                }
+                if (!readOnly && fileLockMethod == FileLockMethod.FS) {
+                    pageStore.setLockFile(true);
+                }
+                pageStore.setLogMode(logMode);
+                pageStore.open();
             }
-            if (!readOnly && fileLockMethod == FileLockMethod.FS) {
-                pageStore.setLockFile(true);
-            }
-            pageStore.setLogMode(logMode);
-            pageStore.open();
+            return pageStore;
         }
-        return pageStore;
     }
 
     /**
-     * Get the first user defined table.
+     * Get the first user defined table, excluding the LOB_BLOCKS table that the
+     * Recover tool creates.
      *
      * @return the table or null if no table is defined
      */
@@ -2564,6 +2768,11 @@ public class Database implements DataHandler {
             if (table.getCreateSQL() != null) {
                 if (table.isHidden()) {
                     // LOB tables
+                    continue;
+                }
+                // exclude the LOB_MAP that the Recover tool creates
+                if (table.getSchema().getId() == Constants.INFORMATION_SCHEMA_ID
+                        && table.getName().equalsIgnoreCase("LOB_BLOCKS")) {
                     continue;
                 }
                 return table;
@@ -2641,8 +2850,8 @@ public class Database implements DataHandler {
         }
         long now = System.nanoTime();
         if (now > reconnectCheckNext + reconnectCheckDelayNs) {
-            if (SysProperties.CHECK && checkpointAllowed < 0) {
-                DbException.throwInternalError("" + checkpointAllowed);
+            if (checkpointAllowed < 0) {
+                DbException.throwInternalError(Integer.toString(checkpointAllowed));
             }
             synchronized (reconnectSync) {
                 if (checkpointAllowed > 0) {
@@ -2684,8 +2893,8 @@ public class Database implements DataHandler {
                     pageStore.checkpoint();
                 }
             }
-            if (mvStore != null) {
-                mvStore.flush();
+            if (store != null) {
+                store.flush();
             }
         }
         getTempFileDeleter().deleteUnused();
@@ -2710,9 +2919,8 @@ public class Database implements DataHandler {
         }
         synchronized (reconnectSync) {
             if (reconnectModified(true)) {
-                checkpointAllowed++;
-                if (SysProperties.CHECK && checkpointAllowed > 20) {
-                    throw DbException.throwInternalError("" + checkpointAllowed);
+                if (++checkpointAllowed > 20) {
+                    throw DbException.throwInternalError(Integer.toString(checkpointAllowed));
                 }
                 return true;
             }
@@ -2733,8 +2941,8 @@ public class Database implements DataHandler {
         synchronized (reconnectSync) {
             checkpointAllowed--;
         }
-        if (SysProperties.CHECK && checkpointAllowed < 0) {
-            throw DbException.throwInternalError("" + checkpointAllowed);
+        if (checkpointAllowed < 0) {
+            throw DbException.throwInternalError(Integer.toString(checkpointAllowed));
         }
     }
 
@@ -2794,27 +3002,32 @@ public class Database implements DataHandler {
         if (log < 0 || log > 2) {
             throw DbException.getInvalidValueException("LOG", log);
         }
-        if (pageStore != null) {
-            if (log != PageStore.LOG_MODE_SYNC ||
-                    pageStore.getLogMode() != PageStore.LOG_MODE_SYNC) {
-                // write the log mode in the trace file when enabling or
-                // disabling a dangerous mode
-                trace.error(null, "log {0}", log);
-            }
+        if (store != null) {
             this.logMode = log;
-            pageStore.setLogMode(log);
+            return;
         }
-        if (mvStore != null) {
-            this.logMode = log;
+        synchronized (this) {
+            if (pageStore != null) {
+                if (log != PageStore.LOG_MODE_SYNC ||
+                        pageStore.getLogMode() != PageStore.LOG_MODE_SYNC) {
+                    // write the log mode in the trace file when enabling or
+                    // disabling a dangerous mode
+                    trace.error(null, "log {0}", log);
+                }
+                this.logMode = log;
+                pageStore.setLogMode(log);
+            }
         }
     }
 
     public int getLogMode() {
-        if (pageStore != null) {
-            return pageStore.getLogMode();
-        }
-        if (mvStore != null) {
+        if (store != null) {
             return logMode;
+        }
+        synchronized (this) {
+            if (pageStore != null) {
+                return pageStore.getLogMode();
+            }
         }
         return PageStore.LOG_MODE_OFF;
     }
@@ -2825,10 +3038,6 @@ public class Database implements DataHandler {
 
     public void setDefaultTableType(int defaultTableType) {
         this.defaultTableType = defaultTableType;
-    }
-
-    public void setMultiVersion(boolean multiVersion) {
-        this.multiVersion = multiVersion;
     }
 
     public DbSettings getSettings() {
@@ -2843,9 +3052,7 @@ public class Database implements DataHandler {
      * @return the hash map
      */
     public <V> HashMap<String, V> newStringMap() {
-        return dbSettings.databaseToUpper ?
-                new HashMap<String, V>() :
-                new CaseInsensitiveMap<V>();
+        return dbSettings.caseInsensitiveIdentifiers ? new CaseInsensitiveMap<V>() : new HashMap<String, V>();
     }
 
     /**
@@ -2856,9 +3063,8 @@ public class Database implements DataHandler {
      * @return the hash map
      */
     public <V> ConcurrentHashMap<String, V> newConcurrentStringMap() {
-        return dbSettings.databaseToUpper ?
-                new NullableKeyConcurrentMap<V>() :
-                new CaseInsensitiveConcurrentMap<V>();
+        return dbSettings.caseInsensitiveIdentifiers ? new CaseInsensitiveConcurrentMap<V>()
+                : new ConcurrentHashMap<String, V>();
     }
 
     /**
@@ -2870,7 +3076,33 @@ public class Database implements DataHandler {
      * @return true if they match
      */
     public boolean equalsIdentifiers(String a, String b) {
-        return a.equals(b) || (!dbSettings.databaseToUpper && a.equalsIgnoreCase(b));
+        return a.equals(b) || dbSettings.caseInsensitiveIdentifiers && a.equalsIgnoreCase(b);
+    }
+
+    /**
+     * Returns identifier in upper or lower case depending on database settings.
+     *
+     * @param upperName
+     *            identifier in the upper case
+     * @return identifier in upper or lower case
+     */
+    public String sysIdentifier(String upperName) {
+        assert isUpperSysIdentifier(upperName);
+        return dbSettings.databaseToLower ? StringUtils.toLowerEnglish(upperName) : upperName;
+    }
+
+    private static boolean isUpperSysIdentifier(String upperName) {
+        int l = upperName.length();
+        if (l == 0) {
+            return false;
+        }
+        for (int i = 0; i < l; i++) {
+            int ch = upperName.charAt(i);
+            if (ch < 'A' || ch > 'Z' && ch != '_') {
+                return false;
+            }
+        }
+        return true;
     }
 
     @Override
@@ -2908,7 +3140,7 @@ public class Database implements DataHandler {
                         !serializerName.equals("null")) {
                     try {
                         javaObjectSerializer = (JavaObjectSerializer)
-                                JdbcUtils.loadUserClass(serializerName).newInstance();
+                                JdbcUtils.loadUserClass(serializerName).getDeclaredConstructor().newInstance();
                     } catch (Exception e) {
                         throw DbException.convert(e);
                     }
@@ -2937,7 +3169,7 @@ public class Database implements DataHandler {
         TableEngine engine = tableEngines.get(tableEngine);
         if (engine == null) {
             try {
-                engine = (TableEngine) JdbcUtils.loadUserClass(tableEngine).newInstance();
+                engine = (TableEngine) JdbcUtils.loadUserClass(tableEngine).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw DbException.convert(e);
             }
@@ -2946,4 +3178,23 @@ public class Database implements DataHandler {
         return engine;
     }
 
+    /**
+     * get authenticator for database users
+     * @return authenticator set for database
+     */
+    public Authenticator getAuthenticator() {
+        return authenticator;
+    }
+
+    /**
+     * Set current database authenticator
+     *
+     * @param authenticator = authenticator to set, null to revert to the Internal authenticator
+     */
+    public void setAuthenticator(Authenticator authenticator) {
+        if (authenticator!=null) {
+            authenticator.init(this);
+        }
+        this.authenticator=authenticator;
+    }
 }
