@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2019 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (http://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
@@ -9,10 +9,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.channels.FileChannel;
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import org.h2.util.MathUtils;
 
 /**
@@ -25,7 +23,7 @@ public abstract class FilePath {
 
     private static FilePath defaultProvider;
 
-    private static Map<String, FilePath> providers;
+    private static ConcurrentHashMap<String, FilePath> providers;
 
     /**
      * The prefix for temporary files.
@@ -66,8 +64,7 @@ public abstract class FilePath {
 
     private static void registerDefaultProviders() {
         if (providers == null || defaultProvider == null) {
-            Map<String, FilePath> map = Collections.synchronizedMap(
-                    new HashMap<String, FilePath>());
+            ConcurrentHashMap<String, FilePath> map = new ConcurrentHashMap<>();
             for (String c : new String[] {
                     "org.h2.store.fs.FilePathDisk",
                     "org.h2.store.fs.FilePathMem",
@@ -77,11 +74,12 @@ public abstract class FilePath {
                     "org.h2.store.fs.FilePathSplit",
                     "org.h2.store.fs.FilePathNio",
                     "org.h2.store.fs.FilePathNioMapped",
+                    "org.h2.store.fs.FilePathAsync",
                     "org.h2.store.fs.FilePathZip",
                     "org.h2.store.fs.FilePathRetryOnInterrupt"
             }) {
                 try {
-                    FilePath p = (FilePath) Class.forName(c).newInstance();
+                    FilePath p = (FilePath) Class.forName(c).getDeclaredConstructor().newInstance();
                     map.put(p.getScheme(), p);
                     if (defaultProvider == null) {
                         defaultProvider = p;
@@ -220,6 +218,7 @@ public abstract class FilePath {
      * @param append if true, the file will grow, if false, the file will be
      *            truncated first
      * @return the output stream
+     * @throws IOException If an I/O error occurs
      */
     public abstract OutputStream newOutputStream(boolean append) throws IOException;
 
@@ -228,6 +227,7 @@ public abstract class FilePath {
      *
      * @param mode the access mode. Supported are r, rw, rws, rwd
      * @return the file object
+     * @throws IOException If an I/O error occurs
      */
     public abstract FileChannel open(String mode) throws IOException;
 
@@ -235,6 +235,7 @@ public abstract class FilePath {
      * Create an input stream to read from the file.
      *
      * @return the input stream
+     * @throws IOException If an I/O error occurs
      */
     public abstract InputStream newInputStream() throws IOException;
 
@@ -249,14 +250,11 @@ public abstract class FilePath {
      * Create a new temporary file.
      *
      * @param suffix the suffix
-     * @param deleteOnExit if the file should be deleted when the virtual
-     *            machine exists
      * @param inTempDir if the file should be stored in the temporary directory
      * @return the name of the created file
      */
     @SuppressWarnings("unused")
-    public FilePath createTempFile(String suffix, boolean deleteOnExit,
-            boolean inTempDir) throws IOException {
+    public FilePath createTempFile(String suffix, boolean inTempDir) throws IOException {
         while (true) {
             FilePath p = getPath(name + getNextTempFileNamePart(false) + suffix);
             if (p.exists() || !p.createFile()) {
@@ -306,7 +304,7 @@ public abstract class FilePath {
     /**
      * Convert a file to a path. This is similar to
      * <code>java.nio.file.spi.FileSystemProvider.getPath</code>, but may
-     * return an object even if the scheme doesn't match in case of the the
+     * return an object even if the scheme doesn't match in case of the
      * default file provider.
      *
      * @param path the path
