@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2019 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (http://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
@@ -114,7 +114,7 @@ public class JdbcUtils {
         String clazz = SysProperties.JAVA_OBJECT_SERIALIZER;
         if (clazz != null) {
             try {
-                serializer = (JavaObjectSerializer) loadUserClass(clazz).newInstance();
+                serializer = (JavaObjectSerializer) loadUserClass(clazz).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw DbException.convert(e);
             }
@@ -124,7 +124,7 @@ public class JdbcUtils {
         if (customTypeHandlerClass != null) {
             try {
                 customDataTypesHandler = (CustomDataTypesHandler)
-                        loadUserClass(customTypeHandlerClass).newInstance();
+                        loadUserClass(customTypeHandlerClass).getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw DbException.convert(e);
             }
@@ -144,7 +144,7 @@ public class JdbcUtils {
         if (allowedClassNames == null) {
             // initialize the static fields
             String s = SysProperties.ALLOWED_CLASSES;
-            ArrayList<String> prefixes = New.arrayList();
+            ArrayList<String> prefixes = new ArrayList<>();
             boolean allowAll = false;
             HashSet<String> classNames = new HashSet<>();
             for (String p : StringUtils.arraySplit(s, ',', true)) {
@@ -177,7 +177,7 @@ public class JdbcUtils {
             if (classFactory.match(className)) {
                 try {
                     Class<?> userClass = classFactory.loadClass(className);
-                    if (!(userClass == null)) {
+                    if (userClass != null) {
                         return (Class<Z>) userClass;
                     }
                 } catch (Exception e) {
@@ -288,18 +288,22 @@ public class JdbcUtils {
             JdbcUtils.load(url);
         } else {
             Class<?> d = loadUserClass(driver);
-            if (java.sql.Driver.class.isAssignableFrom(d)) {
-                try {
-                    Driver driverInstance = (Driver) d.newInstance();
-                    return driverInstance.connect(url, prop); /*fix issue #695 with drivers with the same
-                    jdbc subprotocol in classpath of jdbc drivers (as example redshift and postgresql drivers)*/
-                } catch (Exception e) {
-                    throw DbException.toSQLException(e);
-                }
-            } else if (javax.naming.Context.class.isAssignableFrom(d)) {
-                // JNDI context
-                try {
-                    Context context = (Context) d.newInstance();
+            try {
+                if (java.sql.Driver.class.isAssignableFrom(d)) {
+                    Driver driverInstance = (Driver) d.getDeclaredConstructor().newInstance();
+                    /*
+                     * fix issue #695 with drivers with the same jdbc
+                     * subprotocol in classpath of jdbc drivers (as example
+                     * redshift and postgresql drivers)
+                     */
+                    Connection connection = driverInstance.connect(url, prop);
+                    if (connection != null) {
+                        return connection;
+                    }
+                    throw new SQLException("Driver " + driver + " is not suitable for " + url, "08001");
+                } else if (javax.naming.Context.class.isAssignableFrom(d)) {
+                    // JNDI context
+                    Context context = (Context) d.getDeclaredConstructor().newInstance();
                     DataSource ds = (DataSource) context.lookup(url);
                     String user = prop.getProperty("user");
                     String password = prop.getProperty("password");
@@ -307,13 +311,11 @@ public class JdbcUtils {
                         return ds.getConnection();
                     }
                     return ds.getConnection(user, password);
-                } catch (Exception e) {
-                    throw DbException.toSQLException(e);
                 }
-            } else {
-                // don't know, but maybe it loaded a JDBC Driver
-                return DriverManager.getConnection(url, prop);
+            } catch (Exception e) {
+                throw DbException.toSQLException(e);
             }
+            // don't know, but maybe it loaded a JDBC Driver
         }
         return DriverManager.getConnection(url, prop);
     }
