@@ -1,5 +1,5 @@
 /*
- * Copyright 2004-2018 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2019 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (http://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
@@ -21,7 +21,6 @@ import java.lang.reflect.Proxy;
 import java.nio.channels.FileChannel;
 import java.nio.channels.FileLock;
 import java.sql.Connection;
-import java.sql.DriverManager;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.ResultSetMetaData;
@@ -31,20 +30,18 @@ import java.sql.Types;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.LinkedList;
-import java.util.List;
 import java.util.Objects;
 import java.util.SimpleTimeZone;
 import java.util.concurrent.TimeUnit;
+
+import org.h2.engine.SysProperties;
 import org.h2.jdbc.JdbcConnection;
 import org.h2.message.DbException;
 import org.h2.store.fs.FilePath;
 import org.h2.store.fs.FileUtils;
 import org.h2.test.utils.ProxyCodeGenerator;
 import org.h2.test.utils.ResultVerifier;
-import org.h2.test.utils.SelfDestructor;
-import org.h2.tools.DeleteDbFiles;
 
 /**
  * The base class for all tests.
@@ -96,13 +93,6 @@ public abstract class TestBase {
     }
 
     /**
-     * Start the TCP server if enabled in the configuration.
-     */
-    protected void startServerIfRequired() throws SQLException {
-        config.beforeTest();
-    }
-
-    /**
      * Initialize the test configuration using the default settings.
      *
      * @return itself
@@ -138,12 +128,19 @@ public abstract class TestBase {
         }
         try {
             init(conf);
+            if (!isEnabled()) {
+                if (!conf.executedTests.containsKey(getClass())) {
+                    conf.executedTests.put(getClass(), false);
+                }
+                return;
+            }
+            conf.executedTests.put(getClass(), true);
             start = System.nanoTime();
             test();
             println("");
         } catch (Throwable e) {
             println("FAIL " + e.toString());
-            logError("FAIL " + e.toString(), e);
+            logError("FAIL ("+conf+") " + e.toString(), e);
             if (config.stopOnError) {
                 throw new AssertionError("ERROR");
             }
@@ -152,31 +149,6 @@ public abstract class TestBase {
                 throw (OutOfMemoryError) e;
             }
         }
-    }
-
-    /**
-     * Open a database connection in admin mode. The default user name and
-     * password is used.
-     *
-     * @param name the database name
-     * @return the connection
-     */
-    public Connection getConnection(String name) throws SQLException {
-        return getConnectionInternal(getURL(name, true), getUser(),
-                getPassword());
-    }
-
-    /**
-     * Open a database connection.
-     *
-     * @param name the database name
-     * @param user the user name to use
-     * @param password the password to use
-     * @return the connection
-     */
-    public Connection getConnection(String name, String user, String password)
-            throws SQLException {
-        return getConnectionInternal(getURL(name, false), user, password);
     }
 
     /**
@@ -230,123 +202,7 @@ public abstract class TestBase {
         return dir;
     }
 
-    /**
-     * Get the database URL for the given database name using the current
-     * configuration options.
-     *
-     * @param name the database name
-     * @param admin true if the current user is an admin
-     * @return the database URL
-     */
-    protected String getURL(String name, boolean admin) {
-        String url;
-        if (name.startsWith("jdbc:")) {
-            if (config.mvStore) {
-                name = addOption(name, "MV_STORE", "true");
-                // name = addOption(name, "MVCC", "true");
-            }
-            return name;
-        }
-        if (admin) {
-            // name = addOption(name, "RETENTION_TIME", "10");
-            // name = addOption(name, "WRITE_DELAY", "10");
-        }
-        int idx = name.indexOf(':');
-        if (idx == -1 && config.memory) {
-            name = "mem:" + name;
-        } else {
-            if (idx < 0 || idx > 10) {
-                // index > 10 if in options
-                name = getBaseDir() + "/" + name;
-            }
-        }
-        if (config.networked) {
-            if (config.ssl) {
-                url = "ssl://localhost:"+config.getPort()+"/" + name;
-            } else {
-                url = "tcp://localhost:"+config.getPort()+"/" + name;
-            }
-        } else if (config.googleAppEngine) {
-            url = "gae://" + name +
-                    ";FILE_LOCK=NO;AUTO_SERVER=FALSE;DB_CLOSE_ON_EXIT=FALSE";
-        } else {
-            url = name;
-        }
-        if (config.mvStore) {
-            url = addOption(url, "MV_STORE", "true");
-            // url = addOption(url, "MVCC", "true");
-        } else {
-            url = addOption(url, "MV_STORE", "false");
-        }
-        if (!config.memory) {
-            if (config.smallLog && admin) {
-                url = addOption(url, "MAX_LOG_SIZE", "1");
-            }
-        }
-        if (config.traceSystemOut) {
-            url = addOption(url, "TRACE_LEVEL_SYSTEM_OUT", "2");
-        }
-        if (config.traceLevelFile > 0 && admin) {
-            url = addOption(url, "TRACE_LEVEL_FILE", "" + config.traceLevelFile);
-            url = addOption(url, "TRACE_MAX_FILE_SIZE", "8");
-        }
-        url = addOption(url, "LOG", "1");
-        if (config.throttleDefault > 0) {
-            url = addOption(url, "THROTTLE", "" + config.throttleDefault);
-        } else if (config.throttle > 0) {
-            url = addOption(url, "THROTTLE", "" + config.throttle);
-        }
-        url = addOption(url, "LOCK_TIMEOUT", "" + config.lockTimeout);
-        if (config.diskUndo && admin) {
-            url = addOption(url, "MAX_MEMORY_UNDO", "3");
-        }
-        if (config.big && admin) {
-            // force operations to disk
-            url = addOption(url, "MAX_OPERATION_MEMORY", "1");
-        }
-        if (config.mvcc) {
-            url = addOption(url, "MVCC", "TRUE");
-        }
-        if (config.multiThreaded) {
-            url = addOption(url, "MULTI_THREADED", "TRUE");
-        }
-        if (config.lazy) {
-            url = addOption(url, "LAZY_QUERY_EXECUTION", "1");
-        }
-        if (config.cacheType != null && admin) {
-            url = addOption(url, "CACHE_TYPE", config.cacheType);
-        }
-        if (config.diskResult && admin) {
-            url = addOption(url, "MAX_MEMORY_ROWS", "100");
-            url = addOption(url, "CACHE_SIZE", "0");
-        }
-        if (config.cipher != null) {
-            url = addOption(url, "CIPHER", config.cipher);
-        }
-        if (config.defrag) {
-            url = addOption(url, "DEFRAG_ALWAYS", "TRUE");
-        }
-        if (config.collation != null) {
-            url = addOption(url, "COLLATION", config.collation);
-        }
-        return "jdbc:h2:" + url;
-    }
 
-    private static String addOption(String url, String option, String value) {
-        if (url.indexOf(";" + option + "=") < 0) {
-            url += ";" + option + "=" + value;
-        }
-        return url;
-    }
-
-    private static Connection getConnectionInternal(String url, String user,
-            String password) throws SQLException {
-        org.h2.Driver.load();
-        // url += ";DEFAULT_TABLE_TYPE=1";
-        // Class.forName("org.hsqldb.jdbcDriver");
-        // return DriverManager.getConnection("jdbc:hsqldb:" + name, "sa", "");
-        return DriverManager.getConnection(url, user, password);
-    }
 
     /**
      * Get the small or the big value depending on the configuration.
@@ -583,27 +439,10 @@ public abstract class TestBase {
     }
 
     /**
-     * Delete all database files for this database.
-     *
-     * @param name the database name
+     * @return whether this test is enabled in the current configuration
      */
-    protected void deleteDb(String name) {
-        deleteDb(getBaseDir(), name);
-    }
-
-    /**
-     * Delete all database files for a database.
-     *
-     * @param dir the directory where the database files are located
-     * @param name the database name
-     */
-    protected void deleteDb(String dir, String name) {
-        DeleteDbFiles.execute(dir, name, true);
-        // ArrayList<String> list;
-        // list = FileLister.getDatabaseFiles(baseDir, name, true);
-        // if (list.size() >  0) {
-        //    System.out.println("Not deleted: " + list);
-        // }
+    public boolean isEnabled() {
+        return true;
     }
 
     /**
@@ -716,11 +555,7 @@ public abstract class TestBase {
      * @throws AssertionError if the values are not equal
      */
     public void assertEquals(Object expected, Object actual) {
-        if (expected == null || actual == null) {
-            assertTrue(expected == actual);
-            return;
-        }
-        if (!expected.equals(actual)) {
+        if (!Objects.equals(expected, actual)) {
             fail(" expected: " + expected + " actual: " + actual);
         }
     }
@@ -854,6 +689,19 @@ public abstract class TestBase {
     }
 
     /**
+     * Check if two objects are the same, and if not throw an exception.
+     *
+     * @param expected the expected value
+     * @param actual the actual value
+     * @throws AssertionError if the objects are not the same
+     */
+    public void assertSame(Object expected, Object actual) {
+        if (expected != actual) {
+            fail(" expected: " + expected + " != actual: " + actual);
+        }
+    }
+
+    /**
      * Check if the first value is larger or equal than the second value, and if
      * not throw an exception.
      *
@@ -961,7 +809,9 @@ public abstract class TestBase {
      * @throws AssertionError if the condition is false
      */
     public void assertTrue(boolean condition) {
-        assertTrue("Expected: true got: false", condition);
+        if (!condition) {
+            fail("Expected: true got: false");
+        }
     }
 
     /**
@@ -973,6 +823,31 @@ public abstract class TestBase {
     public void assertNull(Object obj) {
         if (obj != null) {
             fail("Expected: null got: " + obj);
+        }
+    }
+
+    /**
+     * Check that the passed object is not null.
+     *
+     * @param obj the object
+     * @throws AssertionError if the condition is false
+     */
+    public void assertNotNull(Object obj) {
+        if (obj == null) {
+            fail("Expected: not null got: null");
+        }
+    }
+
+    /**
+     * Check that the passed object is not null.
+     *
+     * @param message the message to print if the condition is false
+     * @param obj the object
+     * @throws AssertionError if the condition is false
+     */
+    public void assertNotNull(String message, Object obj) {
+        if (obj == null) {
+            fail(message);
         }
     }
 
@@ -996,7 +871,9 @@ public abstract class TestBase {
      * @throws AssertionError if the condition is true
      */
     protected void assertFalse(boolean value) {
-        assertFalse("Expected: false got: true", value);
+        if (value) {
+            fail("Expected: false got: true");
+        }
     }
 
     /**
@@ -1152,7 +1029,8 @@ public abstract class TestBase {
                     break;
                 case Types.SMALLINT:
                     assertEquals("SMALLINT", typeName);
-                    assertEquals("java.lang.Short", className);
+                    assertEquals(SysProperties.OLD_RESULT_SET_GET_OBJECT ? "java.lang.Short" : "java.lang.Integer",
+                            className);
                     break;
                 case Types.TIMESTAMP:
                     assertEquals("TIMESTAMP", typeName);
@@ -1373,7 +1251,7 @@ public abstract class TestBase {
     }
 
     /**
-     * Check if two databases contain the same met data.
+     * Check if two databases contain the same meta data.
      *
      * @param stat1 the connection to the first database
      * @param stat2 the connection to the second database
@@ -1433,7 +1311,7 @@ public abstract class TestBase {
         try {
             return (TestBase) new SecurityManager() {
                 Class<?> clazz = getClassContext()[2];
-            }.clazz.newInstance();
+            }.clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new RuntimeException(e);
         }
@@ -1453,7 +1331,7 @@ public abstract class TestBase {
      *
      * @return the path to java
      */
-    private static String getJVM() {
+    public static String getJVM() {
         return System.getProperty("java.home") + File.separatorChar + "bin"
                 + File.separator + "java";
     }
@@ -1659,7 +1537,6 @@ public abstract class TestBase {
         }
     }
 
-
     /**
      * Construct a stream of 20 KB that fails while reading with the provided
      * exception.
@@ -1701,56 +1578,5 @@ public abstract class TestBase {
      */
     public String getTestName() {
         return getClass().getSimpleName();
-    }
-
-    /**
-     * Build a child process.
-     *
-     * @param name the name
-     * @param childClass the class
-     * @param jvmArgs the argument list
-     * @return the process builder
-     */
-    public ProcessBuilder buildChild(String name, Class<? extends TestBase> childClass,
-            String... jvmArgs) {
-        List<String> args = new ArrayList<>(16);
-        args.add(getJVM());
-        Collections.addAll(args, jvmArgs);
-        Collections.addAll(args, "-cp", getClassPath(),
-                        SelfDestructor.getPropertyString(1),
-                        childClass.getName(),
-                        "-url", getURL(name, true),
-                        "-user", getUser(),
-                        "-password", getPassword());
-        ProcessBuilder processBuilder = new ProcessBuilder()
-//                            .redirectError(ProcessBuilder.Redirect.INHERIT)
-                            .redirectErrorStream(true)
-                            .redirectOutput(ProcessBuilder.Redirect.INHERIT)
-                            .command(args);
-        return processBuilder;
-    }
-
-    public abstract static class Child extends TestBase {
-        private String url;
-        private String user;
-        private String password;
-
-        public Child(String... args) {
-            for (int i = 0; i < args.length; i++) {
-                if ("-url".equals(args[i])) {
-                    url = args[++i];
-                } else if ("-user".equals(args[i])) {
-                    user = args[++i];
-                } else if ("-password".equals(args[i])) {
-                    password = args[++i];
-                }
-                SelfDestructor.startCountdown(60);
-            }
-        }
-
-        public Connection getConnection() throws SQLException {
-            return getConnection(url, user, password);
-        }
-
     }
 }
